dockerfile updated