@@ -1,18 +1,19 @@
-FROM eclipse-temurin:17-jdk-alpine
+FROM maven:3.8.4-openjdk-17-slim AS build
 
 WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
 
-# Add dependencies
-RUN apk add --no-cache maven
+FROM openjdk:17-slim
 
-# Copy project files
-COPY pom.xml .
-COPY src src
-
-# Add compile arg for Lombok
-RUN mvn clean package -DskipTests --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+WORKDIR /app
+COPY --from=build /app/target/socialMediaApp-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8091
 
-# Update jar path to match your actual jar name
-ENTRYPOINT ["java","-jar","target/socialMediaApp-0.0.1-SNAPSHOT.jar"]
+ENV SPRING_PROFILES_ACTIVE=prod
+ENV SPRING_DATASOURCE_URL=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+ENV SPRING_DATASOURCE_USERNAME=${DB_USER}
+ENV SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
